// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlanInformationPanel /> ACTIVE Plan 1`] = `
<PlanInformationPanel
  plan={
    Object {
      "available_ports": Object {
        "1": 170,
        "2": 0,
        "3": 170,
        "4": 170,
      },
      "bank_names": Object {
        "1": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 1",
        },
        "2": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 2",
        },
        "3": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 3",
        },
        "4": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 4",
        },
      },
      "current_step": 2,
      "focus": Object {
        "column": 1,
        "row": 12,
      },
      "last_step": 12,
      "looping": false,
      "max_steps": 32,
      "num_plan_files": 2,
      "panel_to_show": 0,
      "plan_filename": "__default__",
      "plan_files": Object {
        "1": "__default__",
        "2": "tr",
      },
      "steps": Object {
        "1": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 2,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "10": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 8,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "11": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 128,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "12": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 1,
        },
        "2": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 32,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "3": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 1,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "4": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 128,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "5": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 32,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "6": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 8,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "7": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 128,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "8": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 2,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "9": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 32,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
      },
    }
  }
  timer={30}
  uistatus={
    Object {
      "bank": Object {
        "1": "READY",
        "3": "READY",
        "4": "READY",
      },
      "channel": Object {
        "1": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
        "3": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
        "4": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
      },
      "clean": Object {
        "1": "READY",
        "3": "READY",
        "4": "READY",
      },
      "edit": "READY",
      "identify": "READY",
      "loop_plan": "READY",
      "plan": "READY",
      "plan_loop": "ACTIVE",
      "plan_run": "READY",
      "reference": "READY",
      "run": "READY",
      "run_plan": "READY",
      "standby": "ACTIVE",
    }
  }
>
  <div
    id="inner"
  >
    <div>
      <div
        className="row info-row"
      >
        <div
          className="col text-center br"
          id="plan"
        >
          <span
            className="titles"
          >
            Running Plan: 
          </span>
          <span
            className="values"
          >
            __default__
             
          </span>
        </div>
      </div>
      <div
        className="row info-row-2"
      >
        <div
          className="col text-center center-info info-row"
        >
          <div
            className="row text-center"
            id="curr-port-line"
          >
            <div
              className="titles text-left"
              id="curr-port"
            >
              Current Port: 
            </div>
            <div
              className="values text-left"
              id="curr-port"
            >
              6: Ch. 6
               
            </div>
          </div>
          <div
            className="row text-center"
            id="curr-port-time"
          >
            <div
              className="titles text-left"
              id="curr-port"
            >
               Remaining Time: 
            </div>
            <div
              className="values text-left"
              id="curr-port"
            >
              30
               seconds
            </div>
          </div>
        </div>
        <div
          className="col text-center center-info-2 info-row"
          id="next-port"
        >
          <span
            className="titles"
          >
            Next Port: 
          </span>
          <span
            className="values"
          >
             
            Clean Bank 1
             
          </span>
        </div>
      </div>
    </div>
  </div>
</PlanInformationPanel>
`;

exports[`<PlanInformationPanel /> Last Step = 0 1`] = `
<PlanInformationPanel
  plan={
    Object {
      "available_ports": Object {
        "1": 170,
        "2": 0,
        "3": 170,
        "4": 170,
      },
      "bank_names": Object {
        "1": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 1",
        },
        "2": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 2",
        },
        "3": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 3",
        },
        "4": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 4",
        },
      },
      "current_step": 2,
      "focus": Object {
        "column": 1,
        "row": 12,
      },
      "last_step": 0,
      "looping": false,
      "max_steps": 32,
      "num_plan_files": 2,
      "panel_to_show": 0,
      "plan_filename": "__default__",
      "plan_files": Object {
        "1": "__default__",
        "2": "tr",
      },
      "steps": Object {
        "1": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 2,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "10": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 8,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "11": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 128,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "12": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 1,
        },
        "2": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 32,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "3": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 1,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "4": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 128,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "5": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 32,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "6": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 8,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "7": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 128,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "8": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 2,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "9": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 32,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
      },
    }
  }
  timer={30}
  uistatus={
    Object {
      "bank": Object {
        "1": "READY",
        "3": "READY",
        "4": "READY",
      },
      "channel": Object {
        "1": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
        "3": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
        "4": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
      },
      "clean": Object {
        "1": "READY",
        "3": "READY",
        "4": "READY",
      },
      "edit": "READY",
      "identify": "READY",
      "loop_plan": "READY",
      "plan": "READY",
      "plan_loop": "ACTIVE",
      "plan_run": "READY",
      "reference": "READY",
      "run": "READY",
      "run_plan": "READY",
      "standby": "ACTIVE",
    }
  }
>
  <div
    id="inner"
  >
    <div
      className="info-row"
      id="quick-info"
    >
      No Plan Loaded
    </div>
  </div>
</PlanInformationPanel>
`;

exports[`<PlanInformationPanel /> Snapshot 1`] = `
<PlanInformationPanel
  plan={
    Object {
      "available_ports": Object {
        "1": 170,
        "2": 0,
        "3": 170,
        "4": 170,
      },
      "bank_names": Object {
        "1": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 1",
        },
        "2": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 2",
        },
        "3": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 3",
        },
        "4": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 4",
        },
      },
      "current_step": 11,
      "focus": Object {
        "column": 1,
        "row": 12,
      },
      "last_step": 12,
      "looping": false,
      "max_steps": 32,
      "num_plan_files": 2,
      "panel_to_show": 0,
      "plan_filename": "__default__",
      "plan_files": Object {
        "1": "__default__",
        "2": "tr",
      },
      "steps": Object {
        "1": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 2,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "10": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 8,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "11": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 128,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "12": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 1,
        },
        "2": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 32,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "3": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 1,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "4": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 128,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "5": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 32,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "6": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 8,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "7": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 128,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "8": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 2,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "9": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 32,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
      },
    }
  }
  timer={30}
  uistatus={
    Object {
      "bank": Object {
        "1": "READY",
        "3": "READY",
        "4": "READY",
      },
      "channel": Object {
        "1": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
        "3": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
        "4": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
      },
      "clean": Object {
        "1": "READY",
        "3": "READY",
        "4": "READY",
      },
      "edit": "READY",
      "identify": "READY",
      "loop_plan": "READY",
      "plan": "READY",
      "plan_loop": "READY",
      "plan_run": "READY",
      "reference": "READY",
      "run": "READY",
      "run_plan": "READY",
      "standby": "ACTIVE",
    }
  }
>
  <div
    id="inner"
  >
    <div>
      <div
        className="info-row"
        id="quick-info"
      >
        Loaded Plan: 
        __default__
      </div>
    </div>
  </div>
</PlanInformationPanel>
`;
